[package]
name = "asanamcp"
version = "0.3.2"
edition = "2021"
description = "MCP server for Asana API"
license = "MIT"
homepage = "https://github.com/adlio/asanamcp"
repository = "https://github.com/adlio/asanamcp"
documentation = "https://docs.rs/asanamcp"
readme = "README.md"
keywords = ["asana", "mcp", "api"]
categories = ["api-bindings", "development-tools"]
exclude = ["docs/", ".cargo-husky/", ".claude/", ".github/", "AGENTS.md"]

[lib]
name = "asanamcp"
path = "src/lib.rs"

[[bin]]
name = "asanamcp"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "query"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tokio-test = "0.4"
wiremock = "0.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
